# WordleSolver

./: CMakeLists.txt  README.md
data/: README.txt  word-bank.csv
include/: FeedbackStrategy.h  WordleExceptions.h  WordleGame.h  WordleSolver.h
src/: FeedbackStrategy.cpp  Main.cpp  WordleGame.cpp  WordleSolver.cpp
tests/: WordleGameTests.cpp  WordleSolverTests.cpp
